Changed the tests for the Navigation COmponent to use the ActionLib Client

--- a/cob_navigation_global/test/yaml/nav.yaml
+++ b/cob_navigation_global/test/yaml/nav.yaml
@@ -1,6 +1,8 @@
-goalX: 2.250
-goalY: -0.478
-goalTheta: 0.232
-mode: simple
+mode: 
+  topic:
+  - topicName: _simple  
 toleranceD: 0.3
 toleranceA: 0.3
+goalTheta: 0.232
+goalY: -0.478
+goalX: 2.250
